--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
   width: 100%;
   height: 100vh;
   display: flex;
@@ -57,7 +57,6 @@
   margin-bottom: .4rem;
   overflow: hidden;
   display: flex;
-  /* justify-content: center; */
   align-items: center;
   transition: background .3s ease-in-out, color .3s ease-in-out;
   cursor: pointer;
@@ -110,4 +109,4 @@
   background: #f962b1;
   color: white;
 }
-
+ */
